--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ bower_components
 build/Release
 
 # Dependency directories
+font-end/node_modules/
+server/node_modules/
 node_modules/
 jspm_packages/
 
